package acme.weather;

option java_multiple_files = true;
option java_package = "foo";
option java_outer_classname = "foo";
